# portfolio

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  requirements.md
.husky/: pre-commit
desktop/: Makefile  package-lock.json  package.json  test-symbol-extraction.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
desktop/src/: .cursorrules  App.tsx  CLAUDE.md  styles.css
desktop/src-tauri/: .cursorrules  CLAUDE.md  Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: AdvancedTable.tsx  ApiCreditsBar.tsx  CurrencySelector.tsx  DataReadinessTable.tsx  DataTable.tsx  DividendChart.tsx  EditableOverrideTable.tsx  MetricCard.tsx  Navigation.tsx  PageLayout.tsx  SettingsLayout.tsx  StatsCards.tsx  TanStackTable.tsx
desktop/src/config/: currencies.ts
desktop/src/pages/: CurrencyDataPage.tsx  DashboardPage.tsx  DataReadinessPage.tsx  DividendsPage.tsx  HeatmapPage.tsx  HeatmapsPage.tsx  KeySettingsPage.tsx  NavManagementPage.tsx  PortfolioPage.tsx  PositionsPage.tsx  ReportPage.tsx  SettingsPage.tsx  StockDetailPage.tsx  TransactionsPage.tsx
desktop/src/services/: bulkDownloadManager.ts  fxRateDataService.ts  fxRateService.ts  historicalDataService.ts  historicalFxService.ts  massiveService.ts  navDataService.ts  navService.ts  priceDataService.ts  priceService.ts  settingsService.ts  (+5 more)
desktop/tests/: portfolioCalculations.test.ts  portfolioStore.test.ts  priceDataService.test.ts  rateLimiter.test.ts  settingsStore.test.ts  transactionsStore.test.ts
(+32 files in other folders)
