[package]
name = "portfolio_manager_desktop"
version = "0.1.0"
description = "Portfolio Manager Tauri shell"
authors = ["Codex"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.5", features = [] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = "2"
polars = { version = "0.39", features = ["lazy", "fmt", "temporal"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
